Fix wrong position of the footer component at Home route

--- a/app/components/articleSearch/components/searchItem/abstract.scss
+++ b/app/components/articleSearch/components/searchItem/abstract.scss
@@ -41,7 +41,7 @@
   .abstract {
     margin-top: 10px;
     font-size: 13px;
-    max-height: 138px;
+    max-height: 134px;
     overflow: hidden;
   }
 }
